<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".UploadActivity">

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="670dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/border"
        android:backgroundTint="#00BCA37F"
        android:foreground="@drawable/border"
        android:orientation="vertical"
        android:padding="20dp"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="326dp"
            android:layout_height="0dp"
            android:layout_weight="0.6">

            <ImageView
                android:id="@+id/uploadImage"
                android:layout_width="234dp"
                android:layout_height="338dp"
                android:baselineAligned="false"
                android:contentDescription="@string/imageuploadin"
                android:scaleType="centerInside"
                android:src="@drawable/imageg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.496" />

            <ImageView
                android:id="@+id/backbutton"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:clickable="true"
                android:contentDescription="@string/backbutton"
                android:focusable="true"
                android:onClick="buttonCLick"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/backbutton"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="135dp"
                android:layout_height="115dp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/black"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/uploadCaption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:background="@drawable/border"
                android:baselineAligned="false"
                android:hint="@string/add_a_caption"
                android:importantForAutofill="no"
                android:inputType="none"
                android:padding="16dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/uploadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/green"
                android:contentDescription="@string/upload"
                android:src="@drawable/send_button"
                app:tint="@color/mocha"
                tools:ignore="DuplicateSpeakableTextCheck" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>