<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText"
    android:orientation="vertical">

    <Button
        android:id="@+id/editButton"
        android:layout_width="78dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="293dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/buttonbg"
        android:text="@string/edit"
        android:textAlignment="center"


        android:textColor="#FFFAFA"
        android:textSize="14sp"
        app:backgroundTint="@null"
        app:cornerRadius="@dimen/_100sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        tools:ignore="MissingConstraints,RelativeOverlap,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/subjectTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:editable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="SUBJECT NAME"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#113946"
        android:textSize="34sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096"
        tools:ignore="Deprecated,HardcodedText,MissingConstraints,RelativeOverlap"
        tools:text="SUBJECT NAME"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="128dp"
        android:editable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/day_time_in_time"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
<<<<<<< Updated upstream:app/src/main/res/layout/activity_course_details2.xml
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157"
=======
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172"
>>>>>>> Stashed changes:app/src/main/res/layout/activity_course_details.xml
        tools:ignore="Deprecated,MissingConstraints,NotSibling"
        tools:text="DAY | TIME IN - TIME OUT"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/instructorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:editable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="INSTRUCTOR"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="Deprecated,DuplicateIds,HardcodedText,MissingConstraints,NotSibling,RelativeOverlap"
        tools:text="INSTRUCTOR"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="29dp"
        android:layout_height="27dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:cropToPadding="true"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:srcCompat="@drawable/time"
        app:tint="#BCA37F"
        tools:ignore="ImageContrastCheck,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202"
        app:srcCompat="@drawable/user"
        app:tint="#BCA37F"
        tools:ignore="ImageContrastCheck,MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="540dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="411dp"
            android:layout_height="540dp"
            android:background="#E8DCCB"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.57"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6">


            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="401dp"
                android:layout_height="550dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="16dp">

            </androidx.viewpager2.widget.ViewPager2>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:tabGravity="fill"
        app:tabIndicator="@drawable/tab_indicator"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorColor="#113946"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorGravity="stretch"
        app:tabMode="fixed"
        app:tabSelectedTextColor="#BCA37F"
        app:tabUnboundedRipple="false">


        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/albumTab" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notesTab" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filesTab" />


    </com.google.android.material.tabs.TabLayout>


</androidx.constraintlayout.widget.ConstraintLayout>